I implemented 3 main tools, added them to the list and ran the methods on each of them.

--- a/Oop_Exercises.csproj
+++ b/Oop_Exercises.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrillTool.cs" />
     <Compile Include="HammerTool.cs" />
+    <Compile Include="PipeCutterTool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SawTool.cs" />
+    <Compile Include="ScrewdriverTool.cs" />
     <Compile Include="Tool.cs" />
     <Compile Include="WrenchTool.cs" />
   </ItemGroup>
