--- a/Oop_Exercises.csproj
+++ b/Oop_Exercises.csproj
@@ -45,12 +45,14 @@
   <ItemGroup>
     <Compile Include="DrillTool.cs" />
     <Compile Include="HammerTool.cs" />
+    <Compile Include="NailGunTool.cs" />
     <Compile Include="PipeCutterTool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SawTool.cs" />
     <Compile Include="ScrewdriverTool.cs" />
     <Compile Include="Tool.cs" />
+    <Compile Include="WireStripperTool.cs" />
     <Compile Include="WrenchTool.cs" />
   </ItemGroup>
   <ItemGroup>
